--- a/projet/views/front/css/style.css
+++ b/projet/views/front/css/style.css
@@ -62,6 +62,14 @@ p {
 img {
 	max-width: 100%;
 }
+#event {
+	max-width: 100%;
+	transition: 0.5s;
+}
+#event:hover
+{
+	transform: scale(1.1);
+}
 
 input:focus,
 select:focus,
@@ -74,6 +82,7 @@ a:hover,
 a:focus {
 	text-decoration: none;
 	outline: none;
+
 }
 
 ul,
